--- a/main.html
+++ b/main.html
@@ -9,10 +9,28 @@
 </head>
 
 <body>
-    <div class="container">
-        <div class="row">
-            <div class="col-4">Columna 4</div>
-            <div class="col-8">COL 8</div>
+
+    <div class="row">
+        <div class="col-4">
+            <div>
+                <h5 class="w-100 p-3" style="background-color: #eee;">Acceso directo a contenidos</h5>
+            </div>
+            <div class="w-100 p-3" style="background-color: #eee;">Línea de tiempo personal</div>
+            <div class="w-100 p-3" style="background-color: #eee;">Grupos</div>
+            <div class="w-100 p-3" style="background-color: #eee;">Amigos y conocidos</div>
+            <div class="w-100 p-3" style="background-color: #eee;">Fotos</div>
+            <div class="w-100 p-3" style="background-color: #eee;">Videos</div>
+            <div class="w-100 p-3" style="background-color: #eee;">Configuración</div>
+            <div class="w-100 p-3" style="background-color: #eee;">Market</div>
+            <div class="w-100 p-3" style="background-color: #eee;">Parejas</div>
+            <div class="w-100 p-3" style="background-color: #eee;">Mejores amigos</div>
+        </div>
+        <div class="col-8">
+            <div class="text-md-center">
+                <h4 class="display-4">Línea de tiempo</h4> <br>
+                <h5 class="display-5">¿Qué ha estado pasando?</h5>
+
+            </div>
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
