--- a/main.html
+++ b/main.html
@@ -6,13 +6,66 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="css/post-style.css">
 </head>
 
 <body>
     <div class="container">
         <div class="row">
             <div class="col-4">Columna 4</div>
-            <div class="col-8">COL 8</div>
+            <div class="col-8 col-sm-8 col-md-8 col-lg-8" style="background:thistle;">
+                <div class="card mb-3 text-center">
+                    <div class="row no-gutters">
+                      <div class="col-md-4">
+                        <img src="img/undraw_female_avatar_w3jk.svg" class="card-img img-responsive" alt="...">
+                      </div>
+                      <div class="col-md-8">
+                        <div class="card-body">
+                          <h5 class="card-title">Doña Juanita</h5>
+                          <form>
+                            <div class="form-group">
+                              <label for="comment">Comment:</label>
+                              <textarea class="form-control" rows="5" id="comment"></textarea>
+                            </div>
+                          </form>
+                          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        </div>
+                        <div class="text-right">
+                            <button class="btn btn-post m-3" type="submit">Compartir</button>
+                        </div>
+                      </div>
+                    </div>
+                </div>
+                
+                <!--COMENTARIOS-->
+                <div class="card mb-3 text-center">
+                    <div class="row no-gutters">
+                      <div class="col-md-8">
+                        <div class="card-body">
+                          <h5 class="card-title">Doña Juanita</h5>
+                          <form>
+                            <div class="form-group">
+                              <label for="comment">Comment:</label>
+                              <textarea class="form-control" rows="5" id="comment"></textarea>
+                            </div>
+                          </form>
+                          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        </div>
+                        <div class="text-right">
+                            botones de me gusta
+                        </div>
+                      </div>
+                    </div>
+                </div>
+                <div class="card card-comment" style="background: turquoise;">
+                    <form>
+                        <div class="form-group text-center m-4">
+                          <label for="comment">Comment:</label>
+                          <textarea class="form-control" rows="4" id="comment"></textarea>
+                        </div>
+                      </form>
+                </div>
+            </div>
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
