--- a/main.html
+++ b/main.html
@@ -9,26 +9,23 @@
 </head>
 
 <body>
-
-    <div class="row">
-        <div class="col-4">
-            <div>
-                <h5 class="w-100 p-3" style="background-color: #eee;">Acceso directo a contenidos</h5>
+    <div class="container">
+        <div class="row">
+            <div class="col-4">
+                <div>
+                    <h5 class="w-100 p-3" style="background-color: #eee;">Acceso directo a contenidos</h5>
+                </div>
+                <div class="w-100 p-3" style="background-color: #eee;">Línea de tiempo personal</div>
+                <div class="w-100 p-3" style="background-color: #eee;">Grupos</div>
+                <div class="w-100 p-3" style="background-color: #eee;">Amigos y conocidos</div>
+                <div class="w-100 p-3" style="background-color: #eee;">Fotos</div>
+                <div class="w-100 p-3" style="background-color: #eee;">Videos</div>
+                <div class="w-100 p-3" style="background-color: #eee;">Configuración</div>
+                <div class="w-100 p-3" style="background-color: #eee;">Market</div>
+                <div class="w-100 p-3" style="background-color: #eee;">Parejas</div>
+                <div class="w-100 p-3" style="background-color: #eee;">Mejores amigos</div>
             </div>
-            <div class="w-100 p-3" style="background-color: #eee;">Línea de tiempo personal</div>
-            <div class="w-100 p-3" style="background-color: #eee;">Grupos</div>
-            <div class="w-100 p-3" style="background-color: #eee;">Amigos y conocidos</div>
-            <div class="w-100 p-3" style="background-color: #eee;">Fotos</div>
-            <div class="w-100 p-3" style="background-color: #eee;">Videos</div>
-            <div class="w-100 p-3" style="background-color: #eee;">Configuración</div>
-            <div class="w-100 p-3" style="background-color: #eee;">Market</div>
-            <div class="w-100 p-3" style="background-color: #eee;">Parejas</div>
-            <div class="w-100 p-3" style="background-color: #eee;">Mejores amigos</div>
-        </div>
-        <div class="col-8">
-            <div class="text-md-center">
-                <h4 class="display-4">Línea de tiempo</h4> <br>
-                <h5 class="display-5">¿Qué ha estado pasando?</h5>
+            <div class="col-8">
 
             </div>
         </div>
