--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="row">
             <div class="col-4">Columna 4</div>
-            <div class="col-8 col-sm-8 col-md-8 col-lg-8" style="background:thistle;">
+            <div class="col-8">
                 <div class="card mb-3 text-center">
                     <div class="row no-gutters">
                       <div class="col-md-4">
