--- a/main.html
+++ b/main.html
@@ -12,59 +12,22 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-4">Columna 4</div>
-            <div class="col-8 col-sm-8 col-md-8 col-lg-8" style="background:thistle;">
-                <div class="card mb-3 text-center">
-                    <div class="row no-gutters">
-                      <div class="col-md-4">
-                        <img src="img/undraw_female_avatar_w3jk.svg" class="card-img img-responsive" alt="...">
-                      </div>
-                      <div class="col-md-8">
-                        <div class="card-body">
-                          <h5 class="card-title">Doña Juanita</h5>
-                          <form>
-                            <div class="form-group">
-                              <label for="comment">Comment:</label>
-                              <textarea class="form-control" rows="5" id="comment"></textarea>
-                            </div>
-                          </form>
-                          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                        </div>
-                        <div class="text-right">
-                            <button class="btn btn-post m-3" type="submit">Compartir</button>
-                        </div>
-                      </div>
-                    </div>
+            <div class="col-4">
+                <div>
+                    <h5 class="w-100 p-3" style="background-color: #eee;">Acceso directo a contenidos</h5>
                 </div>
-                
-                <!--COMENTARIOS-->
-                <div class="card mb-3 text-center">
-                    <div class="row no-gutters">
-                      <div class="col-md-8">
-                        <div class="card-body">
-                          <h5 class="card-title">Doña Juanita</h5>
-                          <form>
-                            <div class="form-group">
-                              <label for="comment">Comment:</label>
-                              <textarea class="form-control" rows="5" id="comment"></textarea>
-                            </div>
-                          </form>
-                          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                        </div>
-                        <div class="text-right">
-                            botones de me gusta
-                        </div>
-                      </div>
-                    </div>
-                </div>
-                <div class="card card-comment" style="background: turquoise;">
-                    <form>
-                        <div class="form-group text-center m-4">
-                          <label for="comment">Comment:</label>
-                          <textarea class="form-control" rows="4" id="comment"></textarea>
-                        </div>
-                      </form>
-                </div>
+                <div class="w-100 p-3" style="background-color: #eee;">Línea de tiempo personal</div>
+                <div class="w-100 p-3" style="background-color: #eee;">Grupos</div>
+                <div class="w-100 p-3" style="background-color: #eee;">Amigos y conocidos</div>
+                <div class="w-100 p-3" style="background-color: #eee;">Fotos</div>
+                <div class="w-100 p-3" style="background-color: #eee;">Videos</div>
+                <div class="w-100 p-3" style="background-color: #eee;">Configuración</div>
+                <div class="w-100 p-3" style="background-color: #eee;">Market</div>
+                <div class="w-100 p-3" style="background-color: #eee;">Parejas</div>
+                <div class="w-100 p-3" style="background-color: #eee;">Mejores amigos</div>
+            </div>
+            <div class="col-8">
+
             </div>
         </div>
     </div>
