--- a/main.html
+++ b/main.html
@@ -102,14 +102,53 @@
                           <textarea class="form-control" rows="4" id="comment"></textarea>
                         </div>
                       </form>
-
+                </div> 
+                <br>
+                
+                <!--CARROUSEL-->
+                <div class="container">
+                      <!-- Content here -->
+                      <div class="card mb-3 text-center">
+                        <div class="row no-gutters">
+                          <div class="col-md-8">
+                            <div class="card-body">
+                              <div class= "center">
+                              <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                                <ol class="carousel-indicators">
+                                  <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                                  <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                                  <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                                </ol>
+                                <div class="carousel-inner">
+                                  <div class="carousel-item active">
+                                    <img src="img/Zuckerberg.jpg" class="d-block w-100 h-100" alt="First slide">
+                                  </div>
+                                  <div class="carousel-item">
+                                    <img src="img/zuckerberg_mark_1.jpg" class="d-block w-100 h-100" alt="Second slide">
+                                  </div>
+                                  <div class="carousel-item">
+                                    <img src="img/funny-mark-zuckerberg-congress-hearing-memes-fb4__700-png.jpg" class="d-block w-100 h-100" alt="Third slide">
+                                  </div>
+                                </div>
+                                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                  <span class="sr-only">Previous</span>
+                                </a>
+                                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                  <span class="sr-only">Next</span>
+                                </a>
+                              </div>
+            </div>
+          </div>
+        </div>
             </div>
         </div>
     </div>
 
     
-<body>
-
+    </div>  
+   
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
