boton_con_estilo

--- a/main.html
+++ b/main.html
@@ -93,8 +93,8 @@
                             <div class="text-right">
                                 <!--ACÁ SE INTEGRA EL CONTADOR DE MEGUSTA-->
                                 <div id="CONTADOR">
-                                    <button id="boton1">Me gusta</button>
-                                    <p>A 00<span id="mostrar"> </span> amigos le gusta esto</p>
+                                    <button class="bubbly-button" id="boton1">Me gusta!</button>
+                                    <p>A 0<span id="mostrar"> </span> amigos le gusta esto</p>
                                 </div>
                                 <!--ACÁ TERMINA-->
                             </div>
