--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <ul class="navbar-nav ">
                 <li class="nav-item">
                     <div class="btn-container m-1">
-                        <button type="submit" class="btn btn-a">Login</button>
+                        <button type="submit" onclick="ir_a_login()" class="btn btn-a">Login</button>
                     </div>
                 </li>
                 <li class="nav-item">
@@ -53,5 +53,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
     integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
     crossorigin="anonymous"></script>
+
+    <script src="js/login.js"
 </body>
 </html>
