--- a/login.html
+++ b/login.html
@@ -26,14 +26,14 @@
                 <div class="col-12 col-sm-12 col-md-12 form" >
                     <form>
                         <div class="form-group">
-                            <input type="email" class="form-control form-a" placeholder="Ingrese su email">
+                            <input type="email" id="login-user" class="form-control form-a" placeholder="Ingrese su email">
                         </div>
                         <div class="form-group">
-                            <input type="password" class="form-control form-b" placeholder="Ingrese su contraseña">
+                            <input type="password" id="login-pass" class="form-control form-b" placeholder="Ingrese su contraseña">
                         </div>
 
                         <div class="btn-container">       
-                            <button type="submit" class="btn login-btn">Login</button>
+                            <button type="submit" onclick="login()" class="btn login-btn">Login</button>
                         </div>
                     </form>
                 </div>
@@ -54,6 +54,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
         integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
         crossorigin="anonymous"></script>
+
+    <script src="js/login.js"></script>
 
 </body>
 
