--- a/main.html
+++ b/main.html
@@ -43,27 +43,27 @@
     </nav>
   </header>
 
-  <div class="container-fluid" style="margin-top: 100px;">
+  <div class="container-fluid" style="margin-top: 50px;">
     <div class="row">
       <div class="col-sm-4 col-md-4 mb-3">
-        <div>
-          <h5 class="w-100 p-3" style="background-color: #eee;">Acceso directo a contenidos</h5>
+        <div >
+          <h5 class=" link-access p-3 text-center" >Acceso directo a contenidos</h5>
         </div>
-        <div class="w-100 p-3" style="background-color: #eee;">Línea de tiempo personal <img src="/img/corazon.svg" class="icon-img"></div>
-        <div class="w-100 p-3" style="background-color: #eee;">Grupos <img src="/img/corazon.svg" class="icon-img"></div>
-        <div class="w-100 p-3" style="background-color: #eee;">Amigos y conocidos <img src="/img/corazon.svg" class="icon-img"></div>
-        <div class="w-100 p-3" style="background-color: #eee;">Fotos <img src="/img/corazon.svg" class="icon-img"></div>
-        <div class="w-100 p-3" style="background-color: #eee;">Videos <img src="/img/corazon.svg" class="icon-img"></div>
-        <div class="w-100 p-3" style="background-color: #eee;">Configuración <img src="/img/corazon.svg" class="icon-img"></div>
-        <div class="w-100 p-3" style="background-color: #eee;">Market <img src="/img/corazon.svg" class="icon-img"></div>
-        <div class="w-100 p-3" style="background-color: #eee;">Parejas <img src="/img/corazon.svg" class="icon-img"></div>
-        <div class="w-100 p-3" style="background-color: #eee;">Mejores amigos <img src="/img/corazon.svg" class="icon-img"></div>
+        <div class=" link-access p-3 " >Línea de tiempo personal <i class="far fa-calendar-check"></i></div>
+        <div class=" link-access p-3" >Grupos <i class="fas fa-users"></i></div>
+        <div class=" link-access p-3" >Amigos y conocidos <i class="fas fa-user-friends"></i></div>
+        <div class=" link-access p-3" >Fotos <i class="fas fa-image"></i></div>
+        <div class=" link-access p-3" >Videos <i class="fas fa-video"></i></div>
+        <div class=" link-access p-3" >Configuración <i class="fas fa-cogs"></i></div>
+        <div class=" link-access p-3" >Market <i class="fas fa-bullhorn"></i></div>
+        <div class=" link-access p-3" >Parejas <i class="fas fa-grin-hearts"></i></div>
+        <div class=" link-access p-3" >Mejores amigos <i class="fas fa-hand-peace"></i></div>
       </div>
 
       <!--Card - Post-->
       <div class="col-sm-8 col-md-8 col-lg-8">
         <div class="row">
-          <div class="card mb-3 text-center col-sm-12 col-md-12 w-100">
+          <div class="card mb-3 text-center col-sm-12 col-md-12">
             <div class="row no-gutters">
               <div class="col-md-12">
                 <div class="card-body">
@@ -71,12 +71,12 @@
                   <form>
                     <div class="form-group">
                       <label for="comment">Comenta!</label>
-                      <textarea class="form-control" rows="5" id="comment"></textarea>
+                      <textarea class="form-control" rows="4" id="comment"></textarea>
                     </div>
                   </form>
                 </div>
                 <div class="text-right">
-                  <button class="btn btn-post m-3" type="submit">Compartir</button>
+                  <button class="btn btn-post mb-3" type="submit">Compartir</button>
                 </div>
               </div>
             </div>
@@ -107,12 +107,13 @@
             <!-- Card Actions -->
             <div class="card-footer">
               <div class="d-flex flex-row-reverse">
-                <div class="d-flex flex-row p-1 animacion">
+                <div class="d-flex flex-row p-1">
                   <button type="submit" class="btn btn-outline-primary"><i class="fas fa-thumbs-up"></i><span class="badge">14</span></button>
                 </div>
-                <div class="d-flex flex-row p-1">
-                  <button type="submit" class="btn btn-outline-danger"><i class="fas fa-heart-broken"></i><span class="badge">14</span></button>
+                <div class="d-flex flex-row p-1 ">
+                  <button type="submit" class="btn btn-outline-danger "><i class="fas fa-heart-broken"></i><span class="badge">14</span></button>
                 </div>
+               
                 <div class="d-flex flex-row p-1">
                   <button type="submit" class="btn btn-outline-success" data-toggle="collapse" aria-expanded="true"
                     aria-controls="collapse-comentario" href="#collapse-comentario"> <i class="fas fa-comment"></i> Comentar</button>
@@ -217,6 +218,81 @@
             </div>
           </div>
 
+          <div class="card mb-3" id="myGroup-comentario">
+
+            <!-- Card Header -->
+            <div class="card-header d-flex flex-row">
+              <div class="d-flex flex-row">
+                <div class="p-2">
+                  <img src="img/undraw_female_avatar_w3jk.svg" class="comment-avatar rounded-circle">
+                </div>
+                <div class="p-2">
+                  <h5 class="card-title">Juliane Moore</h5>
+                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+              </div>
+            </div>
+
+            <!-- Card Body -->
+            <div class="card-body">
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Vestibulum porta fringilla eleifend. Vivamus facilisis metus mi, quis convallis libero rutrum vel.
+                Quisque urna dolor, pretium nec rhoncus a, suscipit sit amet augue.</p>
+                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                  <ol class="carousel-indicators">
+                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                  </ol>
+                  <div class="carousel-inner">
+                    <div class="carousel-item active">
+                      <img src="img/pexels-valeria-boltneva-1961778.jpg" class="d-block w-100 h-100" alt="First slide">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="img/pexels-kelly-rabie-1878095.jpg" class="d-block w-100 h-100" alt="Second slide">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="img/pexels-lisa-fotios-1031641.jpg" class="d-block w-100 h-100" alt="Third slide">
+                    </div>
+                  </div>
+                  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                  </a>
+                  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                  </a>
+            </div>
+
+            <!-- Card Actions -->
+            <div class="card-footer">
+              <div class="d-flex flex-row-reverse">
+                <div class="d-flex flex-row p-1">
+                  <button type="submit" class="btn btn-outline-primary"><i class="fas fa-thumbs-up"></i><span class="badge">14</span></button>
+                </div>
+                <div class="d-flex flex-row p-1">
+                  <button type="submit" class="btn btn-outline-danger"><i class="fas fa-heart-broken"></i><span
+                      class="badge">14</span></button>
+                </div>
+                <div class="d-flex flex-row p-1">
+                  <button type="submit" class="btn btn-outline-success" data-toggle="collapse" aria-expanded="true"
+                    aria-controls="collapse-comentario-amigo" href="#collapse-comentario-amigo-2"><i class="fas fa-comment"></i> Comentar</button>
+                </div>
+              </div>
+            </div>
+            <!--Collapse comentario-->
+            <div id="collapse-comentario-amigo-2" class="bg-light p-2 collapse" data-parent="#myGroup-comentario">
+              <div class="d-flex flex-row align-items-start">
+                <textarea class="form-control ml-1 shadow-none textarea"></textarea>
+              </div>
+              <div class="mt-2 text-right">
+                <button class="btn btn-primary btn-sm shadow-none" type="button">Postear comentario</button>
+                <button class="btn btn-outline-primary btn-sm ml-1 shadow-none" type="button">Cancelar</button>
+              </div>
+            </div>
+          </div>
+
         </div>
 
       </div>
@@ -234,6 +310,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
     integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
     crossorigin="anonymous"></script>
+
+  <script src="js/like.js"></script>
 </body>
 
 </html>
